Applying vertical alignment fixes

--- a/app/assets/stylesheets/mortgage_calculator/components/_mortgagecalc.scss
+++ b/app/assets/stylesheets/mortgage_calculator/components/_mortgagecalc.scss
@@ -46,8 +46,8 @@
   @include column(12);
   position: relative;
   max-width: $calc-width;
-  padding: 25px 0;
-  margin:2em 0 10px;
+  padding: 0 0 25px 0;
+  margin:0;
 }
 
 .mortgagecalc__panel {
@@ -69,7 +69,7 @@
   }
 
   &.mortgagecalc__panel--with-form {
-    padding-bottom: 60px;
+    padding-bottom: 50px;
     min-height: 150px;
   }
 
