--- a/app/assets/stylesheets/mortgage_calculator/components/_slider.scss
+++ b/app/assets/stylesheets/mortgage_calculator/components/_slider.scss
@@ -367,7 +367,7 @@
   border-radius:.5em;
   width:100%;
   clear:both;
-  margin:20px 0;
+  margin:10px 0 35px;
 }
 
 .ui-slider .ui-slider-handle {
